--- a/scc.plist
+++ b/scc.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>普元应用门户</string>
+				<string>scc</string>
 			</dict>
 		</dict>
 	</array>
