--- a/scc.plist
+++ b/scc.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.7.169:8080/scc.ipa</string>
+					<string>http://10.19.42.74:8080/default/bm.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
