--- a/scc.plist
+++ b/scc.plist
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.primeton.ayapp.test17</string>
+				<string>com.yunda.bmapp</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
