--- a/zdj.plist
+++ b/zdj.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://42.121.56.140:8180/default/adj.ipa</string>
+					<string>http://42.121.56.140:8180/default/zdj.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
