--- a/zdj.plist
+++ b/zdj.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://192.168.6.101:8080/default/114px.png</string>
+					<string>http://192.168.6.101:8080/default/114x114px.png</string>
 				</dict>
 				<dict> 
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://192.168.6.101:8080/default/57px.png</string>
+					<string>http://192.168.6.101:8080/default/57x57px.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
