--- a/ylj.plist
+++ b/ylj.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.6.101:8080/default/zdj.ipa</string>
+					<string>http://192.168.6.101:8080/default/EmpBridge.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://192.168.6.101:8080/default/114px.png</string>
+					<string>http://192.168.6.101:8080/default/114x114.png</string>
 				</dict>
 				<dict> 
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://42.121.56.140:8180/default/57px.png</string>
+					<string>http://192.168.6.101:8080/default/57x57.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
